--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
+    "react-spinners": "^0.11.0",
     "web3": "1.2.2"
   },
   "scripts": {
