--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "16.11.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.11.0",
     "web3": "1.2.2"
