--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.11.0",
+    "typescript": "^4.3.5",
     "web3": "1.2.2"
   },
   "scripts": {
